--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,11 @@ body {
 .navbar-right {
     margin-right: 0px;
 }
+
+.button-list-item {
+    padding-left: 5px;
+}
+
+.center {
+    text-align: center;
+}
